# nine-strip

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
doc/: NineStrip_Manual.md  compression.md  filters.md  gain-and-bypass.md  one-band-eq.md  saturation.md  shelves.md
src/: CMakeLists.txt  DCBlocker.cpp  DCBlocker.h  EditableComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  VUMeter.cpp  VUMeter.h
src/airwindows/: Baxandall2.cpp  Baxandall2.h  Baxandall2Proc.cpp  CMakeLists.txt  Channel9.cpp  Channel9.h  Channel9Proc.cpp  Highpass2.cpp  Highpass2.h  Highpass2Proc.cpp  Lowpass2.cpp  Lowpass2.h  Lowpass2Proc.cpp  Parametric.cpp  Parametric.h  ParametricProc.cpp  Pressure4.cpp  Pressure4.h  Pressure4Proc.cpp  PurestGain.cpp  PurestGain.h  PurestGainProc.cpp
src/ui/: CMakeLists.txt  FaderLookAndFeel.cpp  FaderLookAndFeel.h  GlowButton.cpp  GlowButton.h  KnobLookAndFeel.cpp  KnobLookAndFeel.h  NeedleVUMeter.cpp  NeedleVUMeter.h  VUMeter.h
